--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   		href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;500;600;700;800&display=swap"
   		rel="stylesheet"
 		/>
+		<link rel="preload" as="image" href="/ozony-elsevif-1.webp" />
+		<link rel="preload" as="image" href="/ozony-elsevif.webp" />
 
 	</head>
 	<body>
